<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_task_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_blue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
...
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_pick_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:checkedChip="@+id/chip_blue"
            app:layout_constraintBottom_toTopOf="@+id/new_task_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_task_description_input"
            app:layout_constraintVertical_bias="0.0"
            app:singleLine="true"
            app:singleSelection="true">
...
